[package]
name = "ember"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
enum-as-inner = "0.6.0"
inquire = "0.6.2"
more-asserts = "0.3.1"
once_cell = "1.19.0"
thiserror = "1.0.56"
